src/web/CareLeavers.Web.Node/scss/partials/_phase-banner.scss
.govuk-phase-banner {
  border-bottom: none;
}

.govuk-phase-banner__content {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  [dir="rtl"] & {
    margin-right: 0;
    margin-left: inherit; // Creates the missing gap between tag and text
  }
}

.translate {
  display: block;
  margin-left: auto;
  text-align: right;
  min-width: 90px;
  float: right;
  font-size: 1em;

  [dir="rtl"] & {
    margin-right: auto;
    margin-left: 0;
  }

  .govuk-link {
    background-image: url("/assets/icon-translate.png");
    background-repeat: no-repeat;
    background-size: contain;
    padding-left: 32px;
  }
}

